# gpuma

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  mirror.yml  python-app.yml
LICENSE/: index.html
cli/: index.html
config/: index.html
docs/: cli.md  config.md  generate_docs.py  gpuma.html  index.md  install.md  reference.md
examples/: config.json  config_orb.json  example_cli_usage.py  example_ensemble_large.py  example_ensemble_optimization.py  example_single_optimization.py  full_benchmark.py  large_batches_benchmark.py
examples/example_input_xyzs/: butene_singlet.xyz  butene_triplet.xyz  butene_triplet_multi.xyz  many_structures.xyz  many_structures_small.xyz
install/: index.html
reference/: index.html
search/: search_index.json
src/gpuma/: __init__.py  api.py  cli.py  config.py  decorators.py  io_handler.py  logging_utils.py  models.py  mol_utils.py  optimizer.py  structure.py
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_config_module.py  test_convergence_criteria.py  test_decorators.py  test_io.py  test_io_handler.py  test_logging.py  test_model_loading_slow.py  test_models.py  test_models_module.py  test_mol_utils.py  test_optimizer.py  test_optimizer_module.py  test_package_api.py  test_structure.py
tests/models/: conftest.py  test_device.py  test_fairchem.py  test_orb.py
tests/optimization/: conftest.py  test_batch.py  test_convergence.py  test_optimizers.py  test_single.py
