[project]
name = "gpuma"
version = "0.6.0"
description = "GPUMA - Geometry optimization toolkit using Fairchem UMA and ORB-v3 models with Torch-Sim"
readme = "README.md"
requires-python = "==3.12.*"
license = "MIT"
authors = [
  { name = "Niklas Hölter", email = "niklas.hoelter@uni-muenster.de" },
]
keywords = ["chemistry", "geometry-optimization", "uma", "fairchem", "ase", "mlip", "gpuma"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "ase==3.27.0",
  "torch-sim-atomistic==0.5.2",
  "fairchem-core==2.18.0",
  "morfeus-ml==0.8.0",
  "rdkit==2025.9.3",
  "tables==3.10.2",
  "scipy==1.17.1",
  "hf_xet==1.2.0",
  "pyyaml==6.0.3",
  "orb-models==0.6.1",
  "nvalchemi-toolkit-ops==0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "build>=1.2.1",
    "twine>=5.0.0",
    "pip-tools>=7.5.2",
    "ruff>=0.14.14",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2"
]

[project.urls]
Source = "https://github.com/NiklasHoelter/gpuma"
Documentation = "https://niklashoelter.github.io/gpuma/"

[project.scripts]
gpuma = "gpuma.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpuma*"]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E203", "D100", "D101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
